Revise methods section to clarify site descriptions, update terminology from 'lowland' to 'boreal', and enhance clarity in experimental design details. Adjust figure caption for accuracy in location description and treatment color coding. Streamline text for improved readability and consistency.

--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -63,47 +63,37 @@ cons <- consumption |>
 
 ```
 
-Three semi-natural, species rich, perennial grassland sites (469, 920, and 1290 m a.s.l.) were established along an elevational gradient in Western Norway (@fig-methods; 7.17°E, 60.88°N). Effectively, the experimental design has only two sites (alpine and sub-alpine), because the lowland site received only transplanted communities (warming treatment crossed with grazing and nitrogen, see below). The sites were 400 m apart in elevation, corresponding to a temperature difference of approximately 3°C in summer air, ground and soil temperature over the duration of the experiment (air temperature; alpine: `r ta$mean[1]` ± `r ta$se[1]` °C; sub-alpine `r ta$mean[2]` ± `r ta$se[2]` °C; lowland: `r ta$mean[3]` ± `r ta$se[3]` °C, *in situ* measurement between May - September in 2019-2022; Supplementry Figure S1). Annual precipitation was similar at the two lowest sites and approximately 800 mm higher at the highest site (alpine: 2089 mm; sub-alpine 1256 mm; lowland: 1292 mm; modeled climate data from the period of 2008 - 2021 by Norwegian Meteorological Institute, met.no). The sites were located on calcareous bedrock with loamy sand and grazed by sheep, goats and deer at the lowland and sub-alpine sites, and mainly sheep and reindeer at the alpine site. Annual plant productivity is similar at the lowland and sub-alpine site (`r prod$mean[1]` ± `r prod$se[1]` g m^-2^ y^-1^, `r prod$mean[2]` ± `r prod$se[2]` g m^-2^ y^-1^, respectively) and about four times lower at the alpine site (`r prod$mean[3]` ± `r prod$se[3]` g m^-2^ y^-1^) (Supplementary Figure S2a). Grazing pressure is 3 - 5 time higher in the sub-alpine site (`r cons$mean[2]` ± `r cons$se[2]` g m2 y-1, 1) compared to the lowland (`r cons$mean[1]` ± `r cons$se[1]` g m2 y-1) and alpine site (`r cons$mean[3]` ± `r cons$se[3]` g m2 y-1; Supplementary Figure S2b). Other factors such as land-use history, vegetation type, slope and exposure were kept as constant as possible. To simulate the natural grazing regime at each site, and to avoid accumulation of biomass, the biomass within the fence was removed at the end of each field season.
+Three semi-natural, species rich, perennial grassland sites were established along an elevational gradient in south-western Norway (@fig-methods; 7.17°E, 60.88°N). Effectively, the experimental design has only two sites (alpine and sub-alpine), because the boreal site received only transplanted communities (warming treatment crossed with grazing and nitrogen, see below). The sites were 400 m apart in elevation (469, 920, and 1290 m a.s.l.), corresponding to a temperature difference of approximately 3°C in summer air, ground and soil temperature over the duration of the experiment (air temperature; alpine: `r ta$mean[1]` ± `r ta$se[1]` °C; sub-alpine `r ta$mean[2]` ± `r ta$se[2]` °C; boreal: `r ta$mean[3]` ± `r ta$se[3]` °C, *in situ* measurement between May - September in 2019-2022; Supplementry Figure S1). Annual precipitation was similar at the two lowest sites and approximately 800 mm higher at the highest site (alpine: 2089 mm; sub-alpine 1256 mm; boreal: 1292 mm; modeled climate data from the period of 2008 - 2021 by Norwegian Meteorological Institute, met.no). The sites were located on calcareous bedrock with loamy sand and grazed by sheep, goats and deer at the boreal and sub-alpine sites, and mainly sheep and reindeer at the alpine site. Annual plant productivity is similar at the boreal and sub-alpine site (`r prod$mean[1]` ± `r prod$se[1]` g m^-2^ y^-1^, `r prod$mean[2]` ± `r prod$se[2]` g m^-2^ y^-1^, respectively) and about four times lower at the alpine site (`r prod$mean[3]` ± `r prod$se[3]` g m^-2^ y^-1^; Supplementary Figure S2a). Grazing pressure is 3 - 5 time higher in the sub-alpine site (`r cons$mean[2]` ± `r cons$se[2]` g m2 y-1, 1) compared to the boreal (`r cons$mean[1]` ± `r cons$se[1]` g m2 y-1) and alpine site (`r cons$mean[3]` ± `r cons$se[3]` g m2 y-1; Supplementary Figure S2b). Other factors such as land-use history, vegetation type, slope and exposure were kept as constant as possible. To simulate the natural grazing regime at each site, and to avoid accumulation of biomass, the biomass within the fenced experimental area was removed at the end of each field season.
 
-![Experimental desgin and map of location. A fully factorial experiment to assess warming, nitrogen addition, clipping andgrazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the boreal site, in fully factorial combinations with nitrogen addition, clipping grazing treatments. The treatments are ambient (gray), warming (pink), nitrogen deposition (gray to green under ambient temperature and pink to brown under warmed conditions, crossed with four levels of clipping and grazing (yellow); none (C), intermediate clipping (one scissor), intensive clipping (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant (warming treatment). Inset shows location of the study sites in Western Norway.](figures/methods.jpg){#fig-methods width="800"}
+![Experimental desgin and map of location. A fully factorial experiment to assess warming, nitrogen addition, clipping andgrazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the boreal site, in fully factorial combinations with nitrogen addition, clipping grazing treatments. The treatments are ambient (gray), warming (red), nitrogen deposition (gray to green under ambient temperature and pink to brown under warmed conditions, crossed with four levels of clipping and grazing (yellow); none (C), intermediate clipping (one scissor), intensive clipping (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant (warming treatment). Inset shows location of the study sites in south-western Norway.](figures/methods.jpg){#fig-methods width="800"}
 
-In summer 2019, ten experimental blocks containing six 50 x 50 cm plots were established at each site (@fig-concept c) and fenced in early spring 2020. In addition, two plots per block were located outside the fence (n = 160). Each plot received a combination of warming, nitrogen addition and grazing treatments in two steps. First, each block was randomly assigned a nitrogen level, to avoid nitrogen contamination between the plots within the blocks. Second, the warming and grazing treatments were randomized within each block, with the exception of the naturally grazed plots, that were located outside the fenced area (for more details see ThreeD data paper pre-print).
-
-<!--# Need to make pre-print for data paper!!!  -->
+In summer 2019, ten experimental blocks containing six 50 x 50 cm plots were established at each site (@fig-methods) and fenced in early spring 2020. In addition, two plots per block were located outside the fence (n = 160). Each plot received a combination of warming, nitrogen addition and grazing treatments in two steps. First, each block was randomly assigned a nitrogen level, to avoid nitrogen contamination between the plots within the blocks. Second, the warming and grazing treatments were randomized within each block, with the exception of the naturally grazed plots, that were located outside the fenced area.
 
 At the end of the growing season in 2019, half of the plots of entire plant communities including roots were cut to a depth of 5 - 25 cm and transplanted to lower elevation, simulating an approximately 3.0 °C warmer growing season temperature. The control plots were not excavated, because studies from similar systems have shown that the effect of transplanting does not affect species composition [@Vandvik2020-hu; @Yang2018-uq]. If necessary, loose soil was carefully removed from the underside of the turf, or local soil was added to the gap or around the edges to ensure the soil surface was in plane with the surrounding vegetation.
 
-Each block received one of the following seven nitrogen treatments: 0, 0.5, 1, 5, 10, 50, and 100 kg N ha^-1^ y^-1^, where three blocks were controls and received no nitrogen addition. Nitrogen was added to each plot using slow dissolving fertilizer pellets (YaraBela OPTI-NS 27-0-0 (4S)). We used oxidised nitrogen (NO~x~) formed mainly by combustion processes [@holland2005nitrogen], which are the main sources of atmospheric nitrogen deposition in remote regions (i.e., away from intensive agriculture and other sources or reduced nitrogen). The nitrogen was added once at the start and once in the middle of the growing season from 2020 - 2022, except in 2020 at the lowest site, where the whole dose of fertilizer was applied at the start of the season.
+Each block received one of the following seven nitrogen treatments: 0, 0.5, 1, 5, 10, 50, and 100 kg N ha^-1^ y^-1^, where three blocks were controls and received no nitrogen addition. Nitrogen was added to each plot using slow dissolving fertilizer pellets (YaraBela OPTI-NS 27-0-0 (4S)). We used oxidised nitrogen (NO~x~) formed mainly by combustion processes [@holland2005nitrogen], which are the main sources of atmospheric nitrogen deposition in remote regions (i.e., away from intensive agriculture and other sources or reduced nitrogen). The nitrogen was added once at the start and once in the middle of the growing season from 2020 - 2022, except in 2020 at the boreal site, where the whole dose of fertilizer was applied at the start of the season.
 
-Finally, each plot was assigned one of four grazing treatments: control (inside grazing exclosure with no grazing or clipping), simulated intermediate grazing, simulated intensive grazing or natural grazing (outside grazing exclosure). We simulated grazing by manually clipping the vegetation using scissors, because our main focus was to understand the effect of biomass removal and we were less interested in the effect of fertilization and trampling by grazers. The simulated intermediate and intensive grazing plots were clipped two or four times about 2-3 cm above the ground during each growing season. The plots located outside the fence were naturally grazed by domestic and wild animals to control for the difference between grazing and clipping (i.e. selectivity of grazers and nutrients addition and trampling of grazers).
+Finally, each plot was assigned one of four clipping or grazing treatments: control (inside grazing exclosure with no grazing or clipping), simulated intermediate clipping, simulated intensive clipping or natural grazing (outside grazing exclosure). We manually clipped the vegetation using scissors. The clipping treatment was used because we wanted to understand the effect of biomass removal and we were less interested in the additional effects of fertilization and trampling by grazers. The intermediate and intensive clipped plots were cut two or four times about 2-3 cm above the ground during each growing season. The plots located outside the fence were naturally grazed by domestic and wild animals to control for the difference between grazing and clipping (i.e. selectivity of grazers and nutrients addition and trampling of grazers). For more details on the methodology see ThreeD data paper pre-print.
 
-In 2020, the intensive grazing plots at the highest alpine site was only cut three times because it was a short growing season due to late snowmelt. An additional cut at the end of the growing season would not have yielded any biomass. In 2021 and 2022, we did not cut Carex species before the species composition was analyzed in early August (first and second cut), because they are difficult to identify without leaf tips.
+In 2020, the intensive clipped plots at the alpine site was only cut three times because it was a short growing season due to late snowmelt. An additional cut at the end of the growing season would not have yielded any biomass. In 2021 and 2022, we did not cut Carex species before the species composition was analyzed in early August (first and second cut), because they are difficult to identify without leaf tips.
 
 ### Data collection
 
 Microclimate data was recorded continuously every 15 minutes, between July 2019 and September 2022, using Tomst TM4 loggers [@Wild2019-nk]. Air, ground and soil temperature as well as soil moisture were measured at 15, 0 cm above and -6 cm below the ground in all warming and grazing treatments inside the fence and at 0, 1, 10, and 100 kg N ha^-1^ y^-1^ (n = 72 loggers). At the alpine site, the block with 0.5 kg N ha^-1^ y^-1^ also received climate loggers, because this block is located further away from the rest and we wanted to make sure to catch any difference in the microclimate. The warming treatment increased air, ground and soil temperature by c. 3 °C and decreased soil moisture (Supplement Figures S1 and S3, Table S1 and S2), but nitrogen addition and grazing had no effect on the microclimate (Supplementary Figure S3 and Table S2).
 
-In 2022, standing biomass was harvested at peak growing season in all plots that were not clipped or grazed. The biomass was harvested 2-3 cm above the ground, sorted to plant functional groups (graminoids with Cyperaceae sorted separately, forbs, legumes, shrubs, bryophytes, lichen and litter as dead unattached plant material), dried at 65 °C for 72 h and weighed. To calculate standing biomass, the biomass of all plant functional groups were summed, except for plant litter.
+In 2022, standing biomass was harvested at peak growing season in all unclipped and -grazed control plots. The biomass was harvested 2-3 cm above the ground, dried at 65 °C for 72 h, and weighed. Plant species composition and vegetation height were recorded at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck. The average vegetation height was measured at four points in each plot.
 
-Plant species composition was recorded at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck.
-
-Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. Ellenberg indicator values for light, temperature, nitrogen, and moisture were extracted from a database for European vascular plants [@tichy2023ellenberg].
+Plant traits and environmental affinities for as many plant species as possible were collected. Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. We used Ellenberg indicator values for light, temperature, nitrogen, reaction,and moisture as environmental affinities. These data were extracted from a database for European vascular plants [@tichy2023ellenberg].
 
 ### Statistical analysis
 
-Standing biomass was estimated in all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying the sum of vascular plant cover for all species with vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for all unclipped and ungrazed control plots with collected standing biomass as response and vascular plant cover x height and the interaction of warming and log transformed nitrogen addition as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained vascular plant cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from this model was then used to back transform the vascular plant cover x height in all plots to estimated standing biomass (kg m^-2^; hereafter standing biomass; Supplementary Figure S4, Table S3). Separate models were run for 2019 and 2022.
+Since standing biomass was only collected in the unclipped and -grazed control plots in 2022, we estimated standing biomass for all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying the sum of vascular plant cover for all species with vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for these control plots with collected standing biomass as response and vascular plant cover x height and the interaction of warming and log transformed nitrogen addition as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained vascular plant cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from this model was then used to back transform the vascular plant cover x height in all plots to estimated standing biomass (kg m^-2^; hereafter standing biomass; Supplementary Figure S4, Table S3). Separate models were run to backtransform the 2019 and 2022 data.
 
-To test if warming, nitrogen addition and clipping affect standing biomass after three years of treatment in 2022, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and a three-way interaction of warming, nitrogen addition and clipping as predictors. The analysis was ran separately for each of the sites. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model.
+To test if warming, nitrogen addition and clipping affect standing biomass after three years of treatment in 2022, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and a three-way interaction of warming, nitrogen addition and clipping as predictors. The analysis was ran separately for each of the sites. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model. We also ran the same analysis for grazing instead of clipping.
 
-<!--# Do we want to run all analysis for grazing as well? -->
+To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. The most parsimonious model for all three diversity indices was the linear model, except for a quadratic model for Shannon diversity at the sub-alpine site. For consistency, and because 𝚫AIC between the quadratic and linear model was relatively low (𝚫AIC = 4.1), we used the linear model. We ran the same analysis for grazing instead of clipping.
 
-To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. The most parsimonious model for all three diversity indices was the linear model, except for Shannon diversity at the sub-alpine site, where the quadratic model was the most parsimonious model. For consistency, we however used the linear model here as well.
-
-<!--# From here we ran all analysis for final biomass/diversity and change in biomass/diversity (log ratio). Do we want to keep both of these analysis? They are similar, but some differences... -->
-
-To test the relationship between standing biomass and Shannon diversity, we run a fixed effects linear model with a normal error distribution. Diversity was the response and the interaction of standing biomass and site the predictors. (We also ran it with warming as predictor... should we describe both models or just one of them...?). (Justify, why we ignore the other drivers here?).
-
-To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass (H1), we ran separate structural equation models (SEM) for each site (see models below). Nitrogen addition was log transformed and grazing was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (grazing and exclosure) instead of the clipping treatment. All SEMs were run using the piecewiseSEM package [@lefcheck2016piecewisesem].
+To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass (H1), we ran separate structural equation models (SEM) for each site (see models below). Nitrogen addition was log transformed and clipping was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (grazing and exclosure) instead of the clipping treatment. All SEMs were run using the piecewiseSEM package [@lefcheck2016piecewisesem].
 
 ```{r}
 #| label: model
@@ -117,8 +107,4 @@ model <- psem(
 
 ```
 
-To better understand the underlying mechanisms, i.e. change in abundance, colonization and extinctions, for how the global change drivers affect diversity, we compared traits of *lose*r and *winner* species. Species were classified as *losers* if they went *extinct* (species that are present pre-treatment but not in the final year and thus go extinct) or *decreased in cover* (species that decrease in cover \> 10% between pre-treatment and the final year). Contrary, species were classified as *winners* if they *colonized* the plots (species that are not present pre-treatment but in the final year and colonize the plot) or *increased* in cover (species that increase in cover \> 10% between pre-treatment and the final year). For each species we compiled the following traits: plant height, Ellenberg light and temperature indicator values. We then calculated the community weighted trait means for losers and winner using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Finally, we tested if the global change drivers affect these community weighted trait means for losers and winners using a linear fixed effects model. We ran separate models for each trait as response and the interactions of the three drivers as predictors. The analysis was run separately for each site.
-
-Finally, we tested if clipping can mitigate the negative impacts of warming and nitrogen addition on diversity (H2). For this, we calculated the effect of clipping on diversity, by taking the difference in diversity in the medium or intensive clipped plots and unclipped control plots. We tested this relationship by using a linear regression with a normal error distribution and the interactions of warming and nitrogen addition, and standing biomass in the control plots, as a baseline, as predictors and the effect of clipping on diversity as response. The analysis was done separately by site.
-
-<!--# If we ran the model without the other drivers we can say: We did not include warming and nitrogen addition in the model to avoid overfitting and because they are good predictors of standing biomass. -->
+[*This text needs to be updated with new PCA and SEM for affinities*] To better understand the underlying mechanisms, i.e. change in abundance, colonization and extinctions, for how the global change drivers affect diversity, we compared traits of *lose*r and *winner* species. Species were classified as *losers* if they went *extinct* (species that are present pre-treatment but not in the final year and thus go extinct) or *decreased in cover* (species that decrease in cover \> 10% between pre-treatment and the final year). Contrary, species were classified as *winners* if they *colonized* the plots (species that are not present pre-treatment but in the final year and colonize the plot) or *increased* in cover (species that increase in cover \> 10% between pre-treatment and the final year). For each species we compiled the following traits: plant height, Ellenberg light and temperature indicator values. We then calculated the community weighted trait means for losers and winner using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Finally, we tested if the global change drivers affect these community weighted trait means for losers and winners using a linear fixed effects model. We ran separate models for each trait as response and the interactions of the three drivers as predictors. The analysis was run separately for each site.
