--- a/manuscript/SEM_output.qmd
+++ b/manuscript/SEM_output.qmd
@@ -103,7 +103,7 @@ At the sub-alpine site, less traits responded to the global change drivers and b
 #### Affinity and trait PCA
 
 ```{r}
-#| label: fig-trait-pca
+#| label: fig-affinity-pca
 #| echo: false
 #| message: false
 #| warning: false
@@ -122,17 +122,32 @@ affinity_pca_plot
 #### 
 
 ```{r}
+#| label: fig-trait-pca
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-width: 8
+#| fig-height: 8
+#| fig-cap: "Multivariate community-weighted mean trait responses to warming, clipping and and nitrogen addition, determined by a principal component analysis (PCA). The PCA was conducted for the alpine and sub-alpine site together. The plant community originating from the alpine (filled symbols) and sub-alpine (open symbols) sites are shown. The colour represents the warming treatment (grey = ambient, red = warming) and the shape the clipping treatment (circle = control, square = medium, triangle = intensive clipping), and the point size indicates nitrogen addition level. Traits include plant height, leaf dry mass, leaf area, leaf thickness, specific leaf area, and leaf dry matter content. Arrows show trait loadings on the first two principal components."
+
+tar_load(trait_pca_plot)
+
+trait_pca_plot
+
+```
+
+```{r}
 #| label: fig-trait-pca2
 #| echo: false
 #| message: false
 #| warning: false
 #| fig-width: 12
 #| fig-height: 10
-#| fig-cap: "Multivariate community-weighted mean affinity (a and b) and trait (c and d)responses to warming, clipping and and nitrogen addition, determined by a principal component analysis (PCA). The PCA was conducted for the alpine and sub-alpine site together. The plant community originating from the alpine (filled symbols) and sub-alpine (open symbols) sites are shown. The colour represents the warming treatment (grey = ambient, red = warming) and the shape the clipping treatment (circle = control, square = medium, triangle = intensive clipping), and the point size indicates nitrogen addition level. Affinities include plant height, temperature, light, moisture, nutrients, reaction. Traits include plant height, leaf dry mass, leaf area, leaf thickness, specific leaf area, and leaf dry matter content. Arrows show trait loadings on the first two principal components."
+#| fig-cap: "Multivariate community-weighted mean affinity (a and b) and trait (c and d)responses to warming, clipping and and nitrogen addition, determined by a principal component analysis (PCA). The PCA was conducted for the alpine and sub-alpine site separately. The plant community originating from the alpine (filled symbols) and sub-alpine (open symbols) sites are shown. The colour represents the warming treatment (grey = ambient, red = warming) and the shape the clipping treatment (circle = control, square = medium, triangle = intensive clipping), and the point size indicates nitrogen addition level. Affinities include plant height, temperature, light, moisture, nutrients, reaction. Traits include plant height, leaf dry mass, leaf area, leaf thickness, specific leaf area, and leaf dry matter content. Arrows show trait loadings on the first two principal components."
 
-tar_load(trait_pca_plot, store = here::here(tar_config_get("store")))
+tar_load(trait_pca_plot_single)
 
-trait_pca_plot
+trait_pca_plot_single
 
 ```
 
@@ -177,9 +192,23 @@ cut_affinity2[[1]]
 #| message: false
 #| fig-width: 10
 #| fig-height: 10
+#| fig-cap: "Structural equation model showing the direct effects of the global change drivers, warming, nitrogen addition and cutting and indirectly through biomass on traits PCA 1 scores for the a) alpine and b) sub-alpine site and the traits PCA 2 scores for the c) alpine and d) sub-alpine site. The numbers indicate the regression coefficients and the thickness of the line relates to the strength of the effect. The linetype and colours shows the strength and direction of the effect (solid coloured = positive and significant, dashed coloured = negative and significant, and dot-dashed grey = negative and non-significant). Each driver, mediator and predictor are coloured in a separate colour: red = warming, dark green = nitrogen, yellow = clipping, light green = biomass, grey = diversity."
+
+tar_load(cut_traits)
+
+cut_traits[[1]]
+
+```
+
+```{r}
+#| label: fig-cut-traits2
+#| echo: false
+#| message: false
+#| fig-width: 10
+#| fig-height: 10
 #| fig-cap: SEM for traits. PCA done separately for alpine and sub-alpine site.
 
-tar_load(cut_traits, store = here::here(tar_config_get("store")))
+tar_load(cut_traits2)
 
 cut_traits[[1]]
 
